--- a/P010768.opf/layers/v001/Pagination.yml
+++ b/P010768.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 12b6a0c1072d4c7d9d7dbcad039fea66
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   8631775db4a7434385185468bd623bac:
